--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    
+    // Для работы с частицами
+    include "net.fabricmc.fabric-api:fabric-particles-v1:0.2.4+"
 }
 
 processResources {
