--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,12 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     
-    // Для работы с частицами
-    include "net.fabricmc.fabric-api:fabric-particles-v1:0.2.4+"
+    // JOML для работы с Vector3f (нужен для частиц)
+    implementation "org.joml:joml:1.10.5"
+    include "org.joml:joml:1.10.5"
+    
+    // Fabric Particles API
+    modImplementation "net.fabricmc.fabric-api:fabric-particles-v1:0.2.4+1.19.4"
 }
 
 processResources {
